Motor ac Henrique e luana/Motor ac Henrique e luana.cydsn/BUILD.log
--------------- Build Started: 09/09/2022 22:37:34 Project: Motor ac Henrique e luana, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\Henrique\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\Henrique\Documents\PSoC Creator\Motor ac Henrique e luana\Motor ac Henrique e luana.cydsn\Motor ac Henrique e luana.cyprj" -d CY8C4245AXI-483 -s "C:\Users\Henrique\Documents\PSoC Creator\Motor ac Henrique e luana\Motor ac Henrique e luana.cydsn\Generated_Source\PSoC4" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:23:9: error: 'b2' undeclared (first use in this function)
         b2 = b2_Read();
         ^
main.c:23:9: note: each undeclared identifier is reported only once for each function it appears in
main.c:24:9: error: 'b1' undeclared (first use in this function)
         b1 = b1_Read();
         ^
main.c:35:1: error: expected declaration or statement at end of input
 }
 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 09/09/2022 22:37:41 ---------------
